CHANGES FROM VERSION 1671

Housekeeping / tidying
-------------------------------
CHANGES FROM VERSION 1670

Fixed version # tracking in ChangeLog, turning on mailing of commit
messages to harmony-hackers again.

To harmony-hackers: you may notice that revision #s do not go up
consecutively. The reason is that /trunk is only one directory in a
larger repository that contains our research papers etc. Commits to
those other directories bump up the revision # but do not send mail to
this list. Sorry :( 

I may also occasionally turn off the the mail hooks when I'm debugging
the commit scripts (to avoid spamming you all with uninteresting
messages).
-------------------------------
CHANGES FROM VERSION 1667

Fixed ChangeLog so that versioning info gets added to commit messages. 

This is a little bit useless because (a) we don't have a numbering
scheme beyond SVN revision #s and (b) those #s are global for the
whole repository, not just for trunk, so they won't always be
consecutive.  However, they give folks a reference for changes to
trunk.
-------------------------------
CHANGES FROM VERSION 1659

Demo, website, and Makefile cleanups:

  * added Javascript key board shortcuts to the web demo. 
       - C-S runs the synchronizer
       - C-h-r resets the demo
       - C-h-e toggles expert mode
       - C-h-i toggles showing instructions
       - C-h-a toggles showing abstract trees
       - C-h-c toggles showing concrete trees
       - C-h-l toggles showing lenses
       - C-h-t toggles showing schema
       - C-h-o toggles showing the archive
       - C-h-h toggles showing harmony output

  * added instructions for anonymous SVN access to website

  * tidied Makefile for exporting (now done nightly)

  * stole unison's Makefile code for updating a ChangeLog. please
    commit to trunk using "make checkin", after editing the file
    logmsg.