@@ -1,3 +1,10 @@
+CHANGES FROM VERSION 1672
+
+Fix another small bug in web demo. It was not updating the replicas or
+archive textareas on conflicts.
+
+Also removed Prelude.Native.iter.
+-------------------------------
 CHANGES FROM VERSION 1671
 
 Housekeeping / tidying
